UI plan a trip page  + book hotels page

--- a/Travely.Client/Travely.Client.csproj
+++ b/Travely.Client/Travely.Client.csproj
@@ -58,6 +58,7 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Images\adventures.png" />
+	  <None Remove="Resources\Images\adventure_Logo.png" />
 	  <None Remove="Resources\Images\banner.PNG" />
 	  <None Remove="Resources\Images\email.png" />
 	  <None Remove="Resources\Images\flying.png" />
