Added some code refactoring for trips page and verified that the page still works

--- a/Travely.Client/Travely.Client.csproj
+++ b/Travely.Client/Travely.Client.csproj
@@ -80,7 +80,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Travely.Domain\Travely.Domain.csproj" />
+	  <ProjectReference Include="..\Travely.BusinessLogic\Travely.BusinessLogic.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
