Added api call for countries and populated list in TripViewModel

--- a/Travely.BusinessLogic/Travely.BusinessLogic.csproj
+++ b/Travely.BusinessLogic/Travely.BusinessLogic.csproj
@@ -7,7 +7,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Travely.Domain\Travely.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources\APICallResources.Designer.cs">
+      <DependentUpon>APICallResources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\APICallResources.resx">
+      <LastGenOutput>APICallResources.Designer.cs</LastGenOutput>
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
