--- a/Travely.Client/Travely.Client.csproj
+++ b/Travely.Client/Travely.Client.csproj
@@ -43,7 +43,7 @@
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" Color="#FFFFF5" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#FFFFF5" />
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#FFFFF5" BaseSize="128,128" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
