--- a/Travely.Client/Travely.Client.csproj
+++ b/Travely.Client/Travely.Client.csproj
@@ -57,7 +57,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\calendar.svg" />
 	  <None Remove="Resources\Images\email.png" />
+	  <None Remove="Resources\Images\flight_number.svg" />
 	  <None Remove="Resources\Images\flying.png" />
 	  <None Remove="Resources\Images\mobile.png" />
 	  <None Remove="Resources\Images\password.png" />
