Modified the UI Edit Trip -> added status and change from entry to label

--- a/Travely.Client/Travely.Client.csproj
+++ b/Travely.Client/Travely.Client.csproj
@@ -71,6 +71,7 @@
 	  <None Remove="Resources\Images\flying.png" />
 	  <None Remove="Resources\Images\hot.png" />
 	  <None Remove="Resources\Images\humidity.png" />
+	  <None Remove="Resources\Images\loading.png" />
 	  <None Remove="Resources\Images\location.png" />
 	  <None Remove="Resources\Images\mobile.png" />
 	  <None Remove="Resources\Images\notepad.png" />
