--- a/Travely.Client/Travely.Client.csproj
+++ b/Travely.Client/Travely.Client.csproj
@@ -76,11 +76,13 @@
 	  <None Remove="Resources\Images\mobile.png" />
 	  <None Remove="Resources\Images\notepad.png" />
 	  <None Remove="Resources\Images\notes_color.png" />
+	  <None Remove="Resources\Images\open_maps.png" />
 	  <None Remove="Resources\Images\pack_image.png" />
 	  <None Remove="Resources\Images\password.png" />
 	  <None Remove="Resources\Images\plan.png" />
 	  <None Remove="Resources\Images\plane_color.png" />
 	  <None Remove="Resources\Images\plane_ticket.png" />
+	  <None Remove="Resources\Images\save_location.png" />
 	  <None Remove="Resources\Images\schedule.png" />
 	  <None Remove="Resources\Images\sort.png" />
 	  <None Remove="Resources\Images\temperature.svg" />
