--- a/Travely.Client/Travely.Client.csproj
+++ b/Travely.Client/Travely.Client.csproj
@@ -82,6 +82,7 @@
 	  <None Remove="Resources\Images\plan.png" />
 	  <None Remove="Resources\Images\plane_color.png" />
 	  <None Remove="Resources\Images\plane_ticket.png" />
+	  <None Remove="Resources\Images\plane_to.png" />
 	  <None Remove="Resources\Images\save_location.png" />
 	  <None Remove="Resources\Images\schedule.png" />
 	  <None Remove="Resources\Images\sort.png" />
