Modified the API call and Dahsboard UI for API Countries Using EUR

--- a/Travely.Client/Travely.Client.csproj
+++ b/Travely.Client/Travely.Client.csproj
@@ -69,6 +69,7 @@
 	  <None Remove="Resources\Images\email.png" />
 	  <None Remove="Resources\Images\flight_number.svg" />
 	  <None Remove="Resources\Images\flying.png" />
+	  <None Remove="Resources\Images\globe.png" />
 	  <None Remove="Resources\Images\hot.png" />
 	  <None Remove="Resources\Images\humidity.png" />
 	  <None Remove="Resources\Images\loading.png" />
